plugins {
    id 'java'
    id 'idea'
}

group 'cn.apisium.nekomaid'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility =  JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://papermc.io/repo/repository/maven-public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
}

dependencies {
    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'io.netty:netty-all:4.1.65.Final'
    compileOnly 'org.jetbrains:annotations:21.0.1'
    compileOnly 'org.apache.logging.log4j:log4j-core:2.14.1'
    compileOnly ('org.spigotmc:plugin-annotations:1.2.3-SNAPSHOT')  {
        exclude group: 'org.bukkit'
    }
    implementation 'javax.activation:activation:1.1.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
    implementation ('com.corundumstudio.socketio:netty-socketio:1.7.18') {
        exclude group: 'org.slf4j'
        exclude group: 'io.netty'
        exclude group: 'com.fasterxml.jackson.core'
    }

    annotationProcessor 'org.spigotmc:plugin-annotations:1.2.3-SNAPSHOT'

    jar {
        from {
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
            configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = "GBK"
}